--- a/app/src/assets/i18n/de.json
+++ b/app/src/assets/i18n/de.json
@@ -1,115 +1,116 @@
 {
-  "NAME": "[DE]Henne Strand Camping",
+  "NAME": "Henne Strand Camping",
 
-  "GETSTARTED_SKIP": "[DE]SPRING OVER",
-  "GETSTARTED_START": "[DE]KOM I GANG",
+  "GETSTARTED_SKIP": "ÜBERSPRINGEN",
+  "GETSTARTED_START": "ERSTE SCHRITTE",
 
-  "GETSTARTED1_TITLE": "[DE]Din personlige guide til oplevelser og aktiviter på ferien",
+  "GETSTARTED1_TITLE": "Ihr persönlicher Guide mit allen Erlebnissen und Aktivitäten in Ihren Ferien",
   
-  "GETSTARTED2_TITLE": "[DE]Hold dig opdateret",
-  "GETSTARTED2_INFO1": "[DE]Se hvad der sker på pladsen",
-  "GETSTARTED2_INFO2": "[DE]Søg efter aktiviteter",
-  "GETSTARTED2_INFO3": "[DE]Tilføj dine aktiviteter",
-  "GETSTARTED2_INFO4": "[DE]Tilmeld dig", 
+  "GETSTARTED2_TITLE": "Bleiben Sie immer auf dem Laufenden",
+  "GETSTARTED2_INFO1": "Sehen Sie was auf dem Platz passiert",
+  "GETSTARTED2_INFO2": "Suchen Sie nach Aktivitäten",
+  "GETSTARTED2_INFO3": "Aktivitäten hinzufügen",
+  "GETSTARTED2_INFO4": "Anmelden", 
 
-  "GETSTARTED3_TITLE": "[DE]Undgå at misse",
-  "GETSTARTED3_INFO1": "[DE]Tips og påmindelser sikrer at du ikke går glip af noget",
+  "GETSTARTED3_TITLE": "Verpassen Sie nichts",
+  "GETSTARTED3_INFO1": "Tipps und Erinnerungen sorgen dafür, dass Sie nichts verpassen",
 
-  "LOGIN_LOGIN": "[DE]Log ind",
-  "LOGIN_FORGOTLOGIN": "[DE]Glemt dit login?",
-  "LOGIN_CREATEUSER": "[DE]Opret bruger",
-  "LOGIN_PREVIEW": "[DE]Smugkig uden at logge ind!",
-  "LOGIN_INVALID_EMAIL": "[DE]Indtast gyldig email",
-  "LOGIN_INVALID_PASSWORD": "[DE]Dit kodeord skal være mere end 6 tegn",
-  "LOGIN_ERROR": "[DE]E-mail og log ind findes ikke. Venligst prøv igen.",
+  "LOGIN_LOGIN": "Einloggen",
+  "LOGIN_FORGOTLOGIN": "Passwort vergessen?",
+  "LOGIN_CREATEUSER": "Benutzerkonto erstellen",
+  "LOGIN_PREVIEW": "Erste Eindrücke ohne sich einzuloggen!",
+  "LOGIN_INVALID_EMAIL": "Gültige e-mail Adresse eingeben",
+  "LOGIN_INVALID_PASSWORD": "Ihr Passwort muss aus mindestens 6 Zeichen bestehen",
+  "LOGIN_ERROR": "E-mail Adresse oder Passwort sind verkehrt. Bitte versuchen Sie es noch einmal.",
 
-  "RESETPASSWORD_TITLE": "[DE]Nulstil dit kodeord",
-  "RESETPASSWORD_INVALID_EMAIL": "[DE]Indtast gyldig email",
-  "RESETPASSWORD_RESET_PASSWORD": "[DE]Nulstil kodeord",
-  "RESETPASSWORD_LINK_SENT": "[DE]Link til nulstilling af kodeord sendt til din email.",
-  "RESETPASSWORD_EMAIL_NOT_FOUND": "[DE]Email ikke fundet.",
+  "RESETPASSWORD_TITLE": "Passwort zurücksetzen",
+  "RESETPASSWORD_INVALID_EMAIL": "Gültige e-mail Adresse eingeben",
+  "RESETPASSWORD_RESET_PASSWORD": "Passwort zurücksetzen",
+  "RESETPASSWORD_LINK_SENT": "Ein Link für die Zurücksetzung Ihres Passworts wurde auf Ihre e-mail Adresse verschickt.",
+  "RESETPASSWORD_EMAIL_NOT_FOUND": "Email Adresse wurde nicht gefunden.",
 
-  "SIGNUP_INVALID_EMAIL": "[DE]Indtast gyldig email",
-  "SIGNUP_INVALID_PASSWORD": "[DE]Dit kodeord skal være mere end 6 tegn",
-  "SIGNUP_INVALID_NAME": "[DE]Dit navn skal være mindst 2 tegn",
-  "SIGNUP_CREATE_ACCOUNT": "[DE]Opret bruger",
-  "SIGNUP_PLACEHOLDER_NAME": "[DE]Navn",
-  "SIGNUP_GUEST_ON": "[DE]Jeg er gæst på:",
-  "SIGNUP_GUEST_ON_CAMPING": "[DE]Henne Strand Camping",
-  "SIGNUP_GUEST_ON_PARTNER": "[DE]Feriepartner Henne Strand",
-  "SIGNUP_ERROR": "[DE]Fejl ved oprettelse af bruger.",
+  "SIGNUP_INVALID_EMAIL": "Gültige e-mail Adresse eingeben",
+  "SIGNUP_INVALID_PASSWORD": "Ihr Passwort muss aus mindestens 6 Zeichen bestehen",
+  "SIGNUP_INVALID_NAME": "Ihr Name muss aus mindestens 2 Zeichen bestehen",
+  "SIGNUP_CREATE_ACCOUNT": "Benutzerkonto erstellen",
+  "SIGNUP_PLACEHOLDER_NAME": "Name",
+  "SIGNUP_GUEST_ON": "Ich bin als Gast gemeldet bei:",
+  "SIGNUP_GUEST_ON_CAMPING": "Henne Strand Camping",
+  "SIGNUP_GUEST_ON_PARTNER": "Feriepartner Henne Strand",
+  "SIGNUP_ERROR": "Fehlermeldung bei Erstellung des Benutzerkontos.",
+  "SIGNUP_PREFERRED_LANGUAGE": "Bevorzugte Sprache", 
 
-  "TAB1_TITLE": "[DE]Hjem",
-  "TAB2_TITLE": "[DE]Aktiviteter",
-  "TAB3_TITLE": "[DE]Søg",
-  "TAB4_TITLE": "[DE]Min Side",
-  "TAB5_TITLE": "[DE]Kontakt",
+  "TAB1_TITLE": "Zuhause",
+  "TAB2_TITLE": "Aktivitäten",
+  "TAB3_TITLE": "Suchen",
+  "TAB4_TITLE": "Meine Seite",
+  "TAB5_TITLE": "Kontakt",
 
-  "ACTIVITIES_TITLE": "[DE]Aktiviteter",
-  "ACTIVITIES_LOADING": "[DE]Indlæser...",
-  "ACTIVITIES_NO_ACTIVITIES": "[DE]Ingen aktiviteter",
+  "ACTIVITIES_TITLE": "Aktivitäten",
+  "ACTIVITIES_LOADING": "Einlesen...",
+  "ACTIVITIES_NO_ACTIVITIES": "Keine Aktivität",
 
-  "ACTIVITIES_FILTER_TITLE": "[DE]Filtrér efter:",
-  "ACTIVITIES_FILTER_ALL": "[DE]Alle",
-  "ACTIVITIES_FILTER_WHO": "[DE]Hvem:",
-  "ACTIVITIES_FILTER_WHERE": "[DE]Hvor:",
-  "ACTIVITIES_FILTER_WHAT": "[DE]Hvad:",
-  "ACTIVITIES_FILTER_PRICE": "[DE]Pris:",
-  "ACTIVITIES_FILTER_WHO_CHILDREN": "[DE]Børn",
-  "ACTIVITIES_FILTER_WHO_ADULTS": "[DE]Voksne",
-  "ACTIVITIES_FILTER_WHO_FAMILY": "[DE]Familie",
-  "ACTIVITIES_FILTER_WHERE_INDOORS": "[DE]Indendørs",
-  "ACTIVITIES_FILTER_WHERE_OUTDOORS": "[DE]Udendørs",
-  "ACTIVITIES_FILTER_WHAT_SPORT": "[DE]Sport",
-  "ACTIVITIES_FILTER_WHAT_NATURE": "[DE]Natur",
-  "ACTIVITIES_FILTER_WHAT_CREATIVE": "[DE]Kreativ",
-  "ACTIVITIES_FILTER_PRICE_FREE_WITH_PACKAGE": "[DE]Gratis med aktivitetspakke",
-  "ACTIVITIES_FILTER_PRICE_PAYING": "[DE]Betalende",
-  "ACTIVITIES_FILTER_PRICE_FREE_FOR_ALL": "[DE]Gratis for alle",
-  "ACTIVITIES_FILTER_RESET": "[DE]Nulstil",
-  "ACTIVITIES_FILTER_UPDATE": "[DE]Opdatér",
+  "ACTIVITIES_FILTER_TITLE": "Filtern nach:",
+  "ACTIVITIES_FILTER_ALL": "Alle",
+  "ACTIVITIES_FILTER_WHO": "Wer:",
+  "ACTIVITIES_FILTER_WHERE": "Wo:",
+  "ACTIVITIES_FILTER_WHAT": "Was:",
+  "ACTIVITIES_FILTER_PRICE": "Preis:",
+  "ACTIVITIES_FILTER_WHO_CHILDREN": "Kinder",
+  "ACTIVITIES_FILTER_WHO_ADULTS": "Erwachsene",
+  "ACTIVITIES_FILTER_WHO_FAMILY": "Familie",
+  "ACTIVITIES_FILTER_WHERE_INDOORS": "Drinnen",
+  "ACTIVITIES_FILTER_WHERE_OUTDOORS": "Draussen",
+  "ACTIVITIES_FILTER_WHAT_SPORT": "Sport",
+  "ACTIVITIES_FILTER_WHAT_NATURE": "Natur",
+  "ACTIVITIES_FILTER_WHAT_CREATIVE": "Kreativ",
+  "ACTIVITIES_FILTER_PRICE_FREE_WITH_PACKAGE": "Gratis mit Aktivitätspaket",
+  "ACTIVITIES_FILTER_PRICE_PAYING": "Zahlen",
+  "ACTIVITIES_FILTER_PRICE_FREE_FOR_ALL": "Gratis für alle",
+  "ACTIVITIES_FILTER_RESET": "Zurücksetzen",
+  "ACTIVITIES_FILTER_UPDATE": "Aktualisieren",
 
-  "ACTIVITY_DETAIL_TIMEOFDAY": "[DE]Tidspunkt",
-  "ACTIVITY_DETAIL_LOCATION": "[DE]Sted",
-  "ACTIVITY_DETAIL_PRICE": "[DE]Pris",
-  "ACTIVITY_DETAIL_PRICE_FREE": "[DE]Gratis",
-  "ACTIVITY_DETAIL_FREE_WITH_PACKAGE": "[DE]gratis med aktivitetspakke",
-  "ACTIVITY_DETAIL_INFO": "[DE]Info",
-  "ACTIVITY_DETAIL_ORGANISER": "[DE]Arrangør",
-  "ACTIVITY_DETAIL_MAX_AMOUNT_OF_PARTICIPANTS_EXCEEDED": "[DE]Der er p.t. ingen ledige pladser",
-  "ACTIVITY_DETAIL_MAX_AMOUNT_OF_PARTICIPANTS_EXCEEDED_MAX": "[DE]maks",
-  "ACTIVITY_DETAIL_MAX_AMOUNT_OF_PARTICIPANTS_EXCEEDED_PARTICIPANTS": "[DE]deltagere",
-  "ACTIVITY_DETAIL_TOO_LATE_TO_UNSUBSCRIBE": "[DE]Bindende tilmelding. Seneste tidspunkt for afmelding overskredet.",
-  "ACTIVITY_DETAIL_LOGIN_TO_SUBSCRIBE": "[DE]Du skal oprette en bruger før du kan tilmelde dig aktiviteter.",
-  "ACTIVITY_DETAIL_LOGIN_CREATE_USER": "[DE]Login/Opret bruger",
+  "ACTIVITY_DETAIL_TIMEOFDAY": "Zeitpunkt",
+  "ACTIVITY_DETAIL_LOCATION": "Treffpunkt",
+  "ACTIVITY_DETAIL_PRICE": "Preis",
+  "ACTIVITY_DETAIL_PRICE_FREE": "Gratis",
+  "ACTIVITY_DETAIL_FREE_WITH_PACKAGE": "Gratis mit Aktivitätspaket",
+  "ACTIVITY_DETAIL_INFO": "Info",
+  "ACTIVITY_DETAIL_ORGANISER": "Veranstalter",
+  "ACTIVITY_DETAIL_MAX_AMOUNT_OF_PARTICIPANTS_EXCEEDED": "Zur Zeit keine freien Plätze",
+  "ACTIVITY_DETAIL_MAX_AMOUNT_OF_PARTICIPANTS_EXCEEDED_MAX": "max",
+  "ACTIVITY_DETAIL_MAX_AMOUNT_OF_PARTICIPANTS_EXCEEDED_PARTICIPANTS": "Teilnehmer",
+  "ACTIVITY_DETAIL_TOO_LATE_TO_UNSUBSCRIBE": "Bindende Teilnahme. Der letzte Termin für eine Abmeldung ist überschritten.",
+  "ACTIVITY_DETAIL_LOGIN_TO_SUBSCRIBE": "Bevor Sie sich für eine Aktivität anmelden können, müssen Sie ein Benutzerkonto erstellen.",
+  "ACTIVITY_DETAIL_LOGIN_CREATE_USER": "Einloggen/Benutzerkonto erstellen",
 
-  "ACTIVITY_DETAIL_SIGNUP": "[DE]Tilmeld",
-  "ACTIVITY_DETAIL_INTERESTED": "[DE]Interesseret",
-  "ACTIVITY_DETAIL_PARTICIPANTS": "[DE]Deltagere",
+  "ACTIVITY_DETAIL_SIGNUP": "Anmelden",
+  "ACTIVITY_DETAIL_INTERESTED": "Interessiert",
+  "ACTIVITY_DETAIL_PARTICIPANTS": "Teilnehmer",
 
-  "SEARCH_TITLE": "[DE]Søg efter aktivitet",
-  "SEARCH_PLACEHOLDER": "[DE]Svømning, spinning, etc.",
-  "SEARCH_CALENDAR": "[DE]Søg i kalender",
-  "SEARCH_SEARCH": "[DE]Søgning:",
+  "SEARCH_TITLE": "Nach Aktivitäten suchen",
+  "SEARCH_PLACEHOLDER": "Schwimmen, Spinning, etc.",
+  "SEARCH_CALENDAR": "Im Kalender suchen",
+  "SEARCH_SEARCH": "Suche:",
 
-  "PROFILE_TITLE": "[DE]Min side",
-  "PROFILE_SUBHEADER": "[DE]Tilmeldt / Reserveret",
-  "PROFILE_INFOBOX_SIGNEDUP": "[DE] = Tilmeldt",
-  "PROFILE_INFOBOX_INTERESTED": "[DE] = Interesseret",
-  "PROFILE_CLICK_TO_SIGNUP": "[DE]Klik på aktiviteten for at tilmelde",
+  "PROFILE_TITLE": "Meine Seite",
+  "PROFILE_SUBHEADER": "Angemeldet / Reserviert",
+  "PROFILE_INFOBOX_SIGNEDUP": " = Angemeldet",
+  "PROFILE_INFOBOX_INTERESTED": " = Interessiert",
+  "PROFILE_CLICK_TO_SIGNUP": "Klicken Sie auf die Aktivität um sich anzumelden",
 
-  "SETTINGS_TITLE": "[DE]Indstillinger",
-  "SETTINGS_SAVE_INFO": "[DE]GEM",
-  "SETTINGS_LOGOUT": "[DE]LOG UD",
-  "SETTINGS_NAME": "[DE]Navn:",
-  "SETTINGS_EMAIL": "[DE]Email:",
-  "SETTINGS_NEWPASSWORD": "[DE]Nyt Password:",
-  "SETTINGS_CURRENTPASSWORD": "[DE]Nuværende Password:",
-  "SETTINGS_INVALID_CURRENT_PASSWORD": "[DE]Forkert kodeord",
-  "SETTINGS_SETTINGS_UPDATED": "[DE]Indstillinger opdateret",
+  "SETTINGS_TITLE": "Einstellungen",
+  "SETTINGS_SAVE_INFO": "SPEICHERN",
+  "SETTINGS_LOGOUT": "AUSLOGGEN",
+  "SETTINGS_NAME": "Name:",
+  "SETTINGS_EMAIL": "Email:",
+  "SETTINGS_NEWPASSWORD": "Neues Passwort:",
+  "SETTINGS_CURRENTPASSWORD": "Derzeitiges Passwort:",
+  "SETTINGS_INVALID_CURRENT_PASSWORD": "Falsches Passwort",
+  "SETTINGS_SETTINGS_UPDATED": "Einstellungen aktualisiert",
 
-  "CONTACT_TITLE": "[DE]Kontakt",
+  "CONTACT_TITLE": "Kontakt",
 
-  "NOTIFICATIONS_ACTIVITYSTARTSIN": "[DE]Aktivitet starter om",
-  "NOTIFICATIONS_MINUTES": "[DE]minutter"
+  "NOTIFICATIONS_ACTIVITYSTARTSIN": "Aktivität beginnt in",
+  "NOTIFICATIONS_MINUTES": "Minuten"
 }
